--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignore job files
 *.job
 
-# Ignore hidden shell files
+# Ignore hidden shell files (these are files that were included when cloning or wget'ing directories and I have deemed them useless)
 .*.sh
