Figuring out ways to get my data and then write a script to run the pipeline. The data I am trying to get is my fastq.gz files from FTP using wget commands. I finally think I have it figured out and I am going to let my process run overnight. Hopefully I have more than one fastq.gz file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 
 # Ignore hidden shell files (these are files that were included when cloning or wget'ing directories and I have deemed them useless)
 .*.sh
+
+# Ignore fastq and gunzipped fastq files
+.fastq
+.fastq.gz
