--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,5 @@
 
 # Ignore hidden shell files (these are files that were included when cloning or wget'ing directories and I have deemed them useless)
 .*.sh
-
-# Ignore fastq and gunzipped fastq files
-.fastq
-.fastq.gz
+*.fastq
+*.fastq.gz
