--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore job files
 *.job
+*job.e*
+*job.o*
 
 # Ignore hidden shell files (these are files that were included when cloning or wget'ing directories and I have deemed them useless)
 .*.sh
