cleaning up data folder

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 *.job
 *job.e*
 *job.o*
+*job.backup
+data/helper2.sh
+data/helper.sh
 
 # Ignore hidden shell files (these are files that were included when cloning or wget'ing directories and I have deemed them useless)
 .*.sh
